--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -17,7 +17,7 @@
 					<input type={{fieldType}} class="form-control form-control-sm" id="exampleInputPassword1" formControlName="password" [ngClass]="{'fieldTest':submitted && login.password.errors?.required}">
 				    <div *ngIf="submitted || login.password.touched">
                         <div *ngIf="login.password.errors?.required" class="text-danger">Password is required !</div>
-                        <div *ngIf="login.password.errors?.pattern" class="text-danger">Password is wrong. Password should be 8 char of numeric !</div>
+                        <div *ngIf="login.password.errors?.pattern" class="text-danger">Password must be maximum 8 characters including only number.</div>
                       </div> 
                       <div class="form-check">
                         <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" (change)="showPassword()">
