--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,47 +1,45 @@
-input.ng-invalid.ng-touched{
-border: 1px solid red;
-}
-.fieldTest{
+input.ng-invalid.ng-touched {
 	border: 1px solid red;
 }
-.card-body{
+
+.fieldTest {
+	border: 1px solid red;
+}
+
+.card-body {
 	box-shadow: 0px 1px 8px 0px #888888 !important;
 }
 
-.form-container{
-	height:100%;
+.form-container {
+	height: 100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	background-color: #f5f5f5;
 }
 
-form{
+form {
 	padding-top: 10px;
 	font-size: 14px;
 	margin-top: 30px;
 }
 
-.card-title{ font-weight:300; }
+.card-title {
+	font-weight: 300;
+}
 
-.btn{
+.btn {
 	font-size: 14px;
-	margin-top:20px;
+	margin-top: 20px;
 }
 
 
-.login-form{ 
-	width:350px;
-	margin:25px;
+.login-form {
+	width: 350px;
+	margin: 25px;
 }
 
-.sign-up{
-	text-align:center;
-	padding:20px 0 0;
-}
-
-.alert{
-	margin-bottom:-30px;
-	font-size: 13px;
-	margin-top:20px;
+.sign-up {
+	text-align: center;
+	padding: 20px 0 0;
 }
